--- a/client/src/components/ui/BackgroundCard.css
+++ b/client/src/components/ui/BackgroundCard.css
@@ -9,6 +9,6 @@
     padding: 0;
     height: 100%;
     
-    
+    z-index: 300;
     /* width: 30%; */
   }
