--- a/client/src/components/ui/Card.css
+++ b/client/src/components/ui/Card.css
@@ -7,7 +7,7 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     margin: 0.5em 1em 0.5em 1em;
     padding: 0; 
-    
+    z-index: 500;
     /* width: 30%; */
   }
 
